Fix border-radius corner overlap issue

--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -2,4 +2,9 @@
     border-radius: .5rem;
     border-color: #bacad6 !important;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+    background: white;
+}
+
+.edit-post-header {
+    background: transparent !important;
 }
